[gd_scene load_steps=3 format=2]

[ext_resource path="res://Circle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Circle" parent="." instance=ExtResource( 1 )]

[node name="DiamondTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="TriangleTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true
[connection signal="timeout" from="DiamondTimer" to="." method="_on_DiamondTimer_timeout"]
[connection signal="timeout" from="TriangleTimer" to="." method="_on_TriangleTimer_timeout"]
